--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -38,7 +38,7 @@
         <div class="form-group">
           <label for="time">Duration till ready</label>
           <input type="text" class="form-control" name ="duration" aria-describedby="emailHelp" placeholder="Enter time until ready">
-          <small id="duration" class="form-text text-muted">Tell customer how long until the order will be ready in</small>
+          <small id="duration" class="form-text text-muted">Tell the customer how long until the order will be ready in</small>
         </div>
         <div class="form-group">
           <label for="phone">Customer's Phone Number</label>
