--- a/styles/confirmed.scss
+++ b/styles/confirmed.scss
@@ -1,16 +1,16 @@
 body {
-        margin-top: 10%;
-        background: url('/images/castlevania.jpeg')no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
+  margin-top: 10%;
+  background: url('/images/castlevania.jpeg')no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 .message {
   font-size: 1.25rem;
   position: relative;
-  left: 10%;
+  left: 7.5%;
   padding: 1rem;
   width: 25%;
   -webkit-animation: fadein 3s;
@@ -21,9 +21,9 @@ body {
 }
 
 footer {
-  -webkit-animation-delay: 1s;
+margin-top: 2.5rem;
+  -webkit-animation-delay: 2s;
   -webkit-animation: fadein 3s;
-  width: 10%;
 }
 
 @-webkit-keyframes fadein {
