--- a/views/order.ejs
+++ b/views/order.ejs
@@ -132,7 +132,7 @@
           </td>
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
         </tr id="6"  class ="row">
-        <tr>
+        <tr class ="row">
           <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
           <td id="6">True Blood Vials</td>
           <td>9.99</td>
