updated menu values

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -75,6 +75,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
+        
       </figure>
     </div>
 
@@ -87,6 +88,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
           </p>
+          <button class = "atc" id ="3" type="submit">Add to Cart</button>
         </figure>
 
         <figure class="col-sm">
@@ -98,6 +100,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
           </p>
+          <button class = "atc" id ="4" type="submit">Add to Cart</button>
         </figure>
 
         <figure class="col-sm">
@@ -109,6 +112,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
           </p>
+          <button class = "atc" id ="5" type="submit">Add to Cart</button>
         </figure>
       </div>
 
@@ -121,28 +125,31 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
             </p>
+            <button class = "atc" id ="1" type="submit">Add to Cart</button>
           </figure>
 
           <figure class="col-sm">
             <div class="menus">
               <img alt="picture" src="/images/heart.png">
             </div>
-            <h2>Fresh Bloody Hearts</h2>
+            <h2 id = "7">Fresh Bloody Hearts</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud
             </p>
+            <button class = "atc" id ="7" type="submit">Add to Cart</button>
           </figure>
 
           <figure class="col-sm">
             <div class="menus">
               <img alt="picture" src="/images/fleshbuds.png">
             </div>
-            <h2>Flesh Rosebuds</h2>
+            <h2 id = "8">Flesh Rosebuds</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud
             </p>
+            <button class = "atc" id ="8" type="submit">Add to Cart</button>
           </figure>
         </div>
 
@@ -151,16 +158,13 @@
               <div class="blood">
                 <img alt="picture" src="/images/cheekshanks.jpg">
               </div>
-              <h2>Cheek Shanks with Blood Reduction</h2>
+              <h2 id = "9">Cheek Shanks with Blood Reduction</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
               </p>
+              <button class = "atc" id ="9" type="submit">Add to Cart</button>
             </figure>
         </div>
-
-        <form action="/order" method="GET">
-          <button id= "checkout" type = "submit">Proceed to Order Summary</button>
-        </form>
 
   </section>
   <% include ../views/partials/_footer %>
