making the images line up evenly in the menu page

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -74,35 +74,34 @@
 
   <section class="flexcontainer">
      
-
-
-        <!-- <div class="menus">
+        <div class="menus">
           <img alt="picture" src="/images/bloodcupcakes.jpg">
+          <h2>Bloody Cupcakes</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+          </p> 
         </div>
-        <h2>Bloody Cupcakes</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-        </p> 
 
         <div class="menus">
           <img alt="picture" src="/images/cocktail.jpg">
+          <h2>Drippy Blood Cocktail</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud
+          </p>
         </div>
-        <h2>Drippy Blood Cocktail</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
 
         <div class="menus">
           <img alt="picture" src="/images/biteshots.jpg">
+          <h2>Bite Shots</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud
+          </p> 
         </div>
-        <h2>Bite Shots</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p> 
-
-        <div class="blood">
+      </section>
+<!--     
+        <div class="menus">
           <img alt="picture" src="/images/slayersoup.jpg">
         </div>
         <h2>Slayer Soup</h2>
@@ -110,15 +109,14 @@
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
 
-
         <div class="menus">
           <img alt="picture" src="/images/heart.png">
-        </div>
-        <h2>Fresh Bloody Hearts</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p> -->
+          <h2>Fresh Bloody Hearts</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud
+          </p> -->
+        </div> -->
 
 <!-- 
         <div class="menus">
@@ -139,7 +137,7 @@
         magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
       </p> 
           -->
-  </section>
+
 
   <% include ../views/partials/_footer %>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
