added more values to order page

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -131,8 +131,8 @@
             <span>0</span>
           </td>
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
-        </tr id="6"  class ="row">
-        <tr class ="row">
+        </tr >
+        <tr id="6"  class ="row">
           <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
           <td id="6">True Blood Vials</td>
           <td>9.99</td>
@@ -143,6 +143,41 @@
           </td>
           <td class="plus"><i class="fas fa-plus-circle"></i></td>
         </tr>
+        <tr id="7"  class ="row">
+          <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
+          <td id="7">Fresh Bloody Hearts</td>
+          <td>9.99</td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
+          <td>
+            <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+            <span>0</span>
+          </td>
+          <td class="plus"><i class="fas fa-plus-circle"></i></td>
+        </tr>
+      
+        <tr id="8"  class ="row">
+          <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
+          <td id="8">Flesh Rosebuds </td>
+          <td>9.99</td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
+          <td>
+            <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+            <span>0</span>
+          </td>
+          <td class="plus"><i class="fas fa-plus-circle"></i></td>
+        </tr>
+        <tr id="9"  class ="row">
+          <!-- <td><img height="10%" width="10%" max-width="596px" max-height="640px" src="/images/slayersoup.jpg"/></td> -->
+          <td id="9">Cheek Shanks with Blood Reduction</td>
+          <td>9.99</td>
+          <td class="minus"><i class="fas fa-minus-circle"></i></td>
+          <td>
+            <!-- <input type="text" name="quantity" maxlength="3" size="2" value ="0"> -->
+            <span>0</span>
+          </td>
+          <td class="plus"><i class="fas fa-plus-circle"></i></td>
+        </tr>
+        
       </tbody>
     </table>
 
