lining up all the menu items. deleted some twilio files

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -40,16 +40,18 @@
   <% include ../views/partials/_header %>
 
   <section class="flexcontainer">
-    
+      <figure>
         <div class="menus">
           <img alt="picture" src="/images/trueblood.jpg">
-
-          <h2>True Blood Vials</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-          </p>
+          <figcaption>
+            <h2>True Blood Vials</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+            </p>
+          </figcaption>
         </div>
+      </figure>
      
         <div class="menus">
           <img alt="picture" src="/images/bloodpunch.jpg">
@@ -58,7 +60,6 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
           </p>
-
         </div>
       
         <div class="menus">
@@ -68,8 +69,8 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
           </p>
-  
         </div>
+
   </section>
 
   <section class="flexcontainer">
@@ -116,7 +117,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
           </p> -->
-        </div> -->
+        <!-- </div> --> 
 
 <!-- 
         <div class="menus">
@@ -136,7 +137,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
       </p> 
-          -->
+        -->
 
 
   <% include ../views/partials/_footer %>
