--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,11 +1,16 @@
 body {
   margin-top: 10%;
-  background: url('/images/bloody-background.jpg')no-repeat center center fixed;
+  background-color: black;
+  // background: url('/images/bloody-background.jpg')no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  background-color: white;
 }
 
 h2 {
