--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -40,19 +40,14 @@
   <% include ../views/partials/_header %>
 
   <section class="flexcontainer">
-      <figure>
         <div class="menus">
           <img alt="picture" src="/images/trueblood.jpg">
-          <figcaption>
             <h2>True Blood Vials</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
             </p>
-          </figcaption>
         </div>
-      </figure>
-     
         <div class="menus">
           <img alt="picture" src="/images/bloodpunch.jpg">
           <h2>Blood Punch</h2>
@@ -61,7 +56,6 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud
           </p>
         </div>
-      
         <div class="menus">
           <img alt="picture" src="/images/fangcookies.jpg">
           <h2>Fang Cookies</h2>
@@ -70,11 +64,9 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud
           </p>
         </div>
-
   </section>
 
   <section class="flexcontainer">
-     
         <div class="menus">
           <img alt="picture" src="/images/bloodcupcakes.jpg">
           <h2>Bloody Cupcakes</h2>
@@ -82,7 +74,6 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
           </p> 
         </div>
-
         <div class="menus">
           <img alt="picture" src="/images/cocktail.jpg">
           <h2>Drippy Blood Cocktail</h2>
@@ -91,7 +82,6 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud
           </p>
         </div>
-
         <div class="menus">
           <img alt="picture" src="/images/biteshots.jpg">
           <h2>Bite Shots</h2>
@@ -101,43 +91,43 @@
           </p> 
         </div>
       </section>
-<!--     
+
+      <section class="flexcontainer">
         <div class="menus">
           <img alt="picture" src="/images/slayersoup.jpg">
+          <h2>Slayer Soup</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+          </p>
         </div>
-        <h2>Slayer Soup</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-        </p>
-
         <div class="menus">
           <img alt="picture" src="/images/heart.png">
           <h2>Fresh Bloody Hearts</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud
-          </p> -->
-        <!-- </div> --> 
-
-<!-- 
+          </p>
+        </div> 
         <div class="menus">
-          <img alt="picture" src="/images/fleshbuds.png">
+            <img alt="picture" src="/images/fleshbuds.png">
+            <h2>Flesh Rosebuds</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud
+            </p>
         </div>
-        <h2>Flesh Rosebuds</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
-        </p>
-       
+      </section>
 
+   
+    <section class="flexcontainer">
       <div class="menus">
         <img alt="picture" src="/images/cheekshanks.jpg">
+        <h2>Cheek Shanks with Blood Reduction</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        </p> 
       </div>
-      <h2>Cheek Shanks with Blood Reduction</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-      </p> 
-        -->
+    </section>
 
 
   <% include ../views/partials/_footer %>
