removed header on table on order page

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -38,11 +38,11 @@
       <table class="table table-borderless table-dark">
         <thead>
           <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th width="10%">Minus</th>
-            <th width="10%">Quantity</th>
-            <th width="10%">Plus</th>
+            <th class="hide">Name</th>
+            <th class="hide">Price</th>
+            <th class="hide" width="10%">Minus</th>
+            <th class="hide" width="10%">Quantity</th>
+            <th class="hide" width="10%">Plus</th>
           </tr>
         </thead>
         <tbody>
