--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,14 +49,14 @@
           <img class="d-block w-100" src="images/fleshbuds.png" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Fleshy Rosebuds</h5>
-            <p>This marvel of culinary art, expertly fashioned, was designed to satisfy more sense than one. Jellied cubes topped with meat of some unknown mammal (may or may not contain human). </p>
+            <p>A marvel of the culinary arts, expertly fashioned. Jellied cubes topped with meat of some unknown mammal (may or may not contain human). Designed to excite more senses than one! </p>
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="images/heart.png" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
-            <h5>...</h5>
-            <p>...</p>
+            <h5>A heart</h5>
+            <p>Just a plain old heart. Nothing out of the ordinary...</p>
           </div>
         </div>
       </div>
