modified edit button to redirect to order page and reflect quantity of items already selected to show in quantity

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -54,7 +54,9 @@
           </tr>
         </tfoot>
       </table>
-      <button type="submit" class="btn btn-dark">Edit</button>
+       <form action="/edit">
+          <button type="submit" class="btn btn-dark" formmethod="post">Edit</button>
+        </form>
     </div>
 
     <div class="info">
