--- a/styles/order.scss
+++ b/styles/order.scss
@@ -1,3 +1,11 @@
+.order {
+  color: #fff;
+  background-color: rgba(0,0,0,0.6);
+  margin-left:auto;
+  margin-right:auto;
+  max-width: 70vw;
+}
+
 .table-dark {
   color: #ffffff;
   background-color: rgba(0,0,0,0.6);
