--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
+    padding: 4%;
  }
 
 figure {
@@ -14,21 +16,29 @@ h2 {
 }
 
 p {
-  color: #fbd8c3;
+  color: white;
 }
 
 .menus {
     height: 23vw;
     width: 23vw;
-
+    z-index: 1;
+    padding-right: 2%;
 }
 
 .menus img {
     width: 100%;
     height: 61%;
     object-fit: cover;
+    z-index: 1;
 }
 
 .image {
     opacity: 0.8
+}
+
+button {
+    background-color: #8b8d6d;
+    color: black;
+    border-color: red;
 }
