--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -37,129 +37,131 @@
 </head>
 
 <body>
+
   <% include ../views/partials/_header %>
+  <div class ="transparent-box">
 
-  <section class="flexcontainer">
-    <div class="menus">
-      <img alt="picture" src="/images/trueblood.jpg">
-      <h2>True Blood Vials</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
+    <section class="flexcontainer">
+      <div class="menus">
+        <img alt="picture" src="/images/trueblood.jpg">
+        <h2>True Blood Vials</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+      <div class="menus">
+        <img alt="picture" src="/images/bloodpunch.jpg">
+        <h2>Blood Punch</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+      <div class="menus">
+        <img alt="picture" src="/images/fangcookies.jpg">
+        <h2>Fang Cookies</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+    </section>
 
-    <div class="menus">
-      <img alt="picture" src="/images/bloodpunch.jpg">
-      <h2>Blood Punch</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
-    <div class="menus">
-      <img alt="picture" src="/images/fangcookies.jpg">
-      <h2>Fang Cookies</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
-  </section>
+    <section class="flexcontainer">
+      <div class="menus">
+        <img alt="picture" src="/images/bloodcupcakes.jpg">
+        <h2>Bloody Cupcakes</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+      <div class="menus">
+        <img alt="picture" src="/images/cocktail.jpg">
+        <h2>Drippy Blood Cocktail</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+      <div class="menus">
+        <img alt="picture" src="/images/biteshots.jpg">
+        <h2>Bite Shots</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+    </section>
 
-  <section class="flexcontainer">
-    <div class="menus">
-      <img alt="picture" src="/images/bloodcupcakes.jpg">
-      <h2>Bloody Cupcakes</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
-    <div class="menus">
-      <img alt="picture" src="/images/cocktail.jpg">
-      <h2>Drippy Blood Cocktail</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
-    <div class="menus">
-      <img alt="picture" src="/images/biteshots.jpg">
-      <h2>Bite Shots</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
-  </section>
-
-  <section class="flexcontainer">
-    <div class="menus">
-      <img alt="picture" src="/images/slayersoup.jpg">
-      <h2>Slayer Soup</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
-    <div class="menus">
-      <img alt="picture" src="/images/heart.png">
-      <h2>Fresh Bloody Hearts</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
-    <div class="menus">
-      <img alt="picture" src="/images/fleshbuds.png">
-      <h2>Flesh Rosebuds</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
-  </section>
+    <section class="flexcontainer">
+      <div class="menus">
+        <img alt="picture" src="/images/slayersoup.jpg">
+        <h2>Slayer Soup</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+      <div class="menus">
+        <img alt="picture" src="/images/heart.png">
+        <h2>Fresh Bloody Hearts</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+      <div class="menus">
+        <img alt="picture" src="/images/fleshbuds.png">
+        <h2>Flesh Rosebuds</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+    </section>
 
 
-  <section class="flexcontainer">
-    <div class="menus">
-      <img alt="picture" src="/images/cheekshanks.jpg">
-      <h2>Cheek Shanks with Blood Reduction</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
-      </p>
-      <form method="" action="post">
-        <button type="submit">Add to Cart</button>
-      </form>
-    </div>
-  </section>
+    <section class="flexcontainer">
+      <div class="menus">
+        <img alt="picture" src="/images/cheekshanks.jpg">
+        <h2>Cheek Shanks with Blood Reduction</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        </p>
+        <form method="" action="post">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+    </section>
 
+  </div>
 
   <% include ../views/partials/_footer %>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
