clear local storage object upon returning to homepage from confirmed page

--- a/views/confirmed.ejs
+++ b/views/confirmed.ejs
@@ -25,10 +25,12 @@
   <link rel="stylesheet" href="/styles/confirmed.css" type="text/css"/>
   <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
 
-  <!--Javascript -->
+  <!--Jquery Javascript -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 
-  
+  <!-- Application JS -->
+  <script type="text/javascript" src="/scripts/confirmed.js"></script>
+
 </head>
 
   <body>
@@ -44,7 +46,7 @@
 
     <footer>
       <a href="/">
-        <button type="button" class="btn btn-dark" tpye="submit"">Back to the lair!</button>
+        <button id="lair" type="button" class="btn btn-dark" type="submit"">Back to the lair!</button>
       </a>
     </footer>
   </div>
