finishing touches on the aesthetic of the menus page, added design to buttons and changed font

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -15,8 +15,7 @@ body {
   background-color: black;
 }
 
-
 h2 {
-  font-family: 'Jolly Lodger', cursive;
+  font-family: 'Pirata One', cursive;
 }
 
