--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -11,11 +11,12 @@ figure {
     display: inline-block;
 }
 
-h2 {
+.menus h2 {
   color: #c91507;
+  margin-top: 3%;
 }
 
-p {
+.menus p {
   color: white;
 }
 
@@ -30,7 +31,6 @@ p {
     width: 100%;
     height: 61%;
     object-fit: cover;
-    z-index: 1;
 }
 
 .image {
@@ -40,5 +40,6 @@ p {
 button {
     background-color: #8b8d6d;
     color: black;
-    border-color: red;
+    border-color: #4e4747;
+    box-shadow: 2px 2px #696969;
 }
