--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -20,7 +20,7 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Pirata+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Pirata+One|Roboto" rel="stylesheet">
 
   <!--CSS pages -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
