minor style changes

--- a/styles/checkout.scss
+++ b/styles/checkout.scss
@@ -2,6 +2,11 @@
     opacity: 0.8
 }
 
+.header h2 {
+  font-size: 5rem;
+  color: white
+}
+
 .summary {
   margin-left:auto;
   margin-right:auto;
