--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -34,7 +34,9 @@
   <body>
   <% include ../views/partials/_header %>
     <div class="summary">
-      <h2>Order Summary</h2>
+      <div class="header">
+        <h2>Order Summary</h2>
+      </div>
       <table class="table table-borderless table-dark">
         <thead>
           <tr>
