--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
 
   <body>
     <% include ../views/partials/_header %>
-    <h1 class="welcome">Welcome to lair!</h1>
+    <h1 class="welcome">Welcome to the lair!</h1>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
