--- a/views/order.ejs
+++ b/views/order.ejs
@@ -47,7 +47,7 @@
         </thead>
         <tbody>
           <tr>
-            <td id="1">Slayer Soup</td>
+            <td id="1">True Blood Vials</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
             <td class="quantity">
@@ -56,7 +56,16 @@
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
           <tr>
-            <td id="2">Blood Punch</td>
+            <td id="2">Blood Puch</td>
+            <td>9.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td class="quantity">
+              <span>0</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          </tr>
+          <tr>
+            <td id="3">Fang Cookies</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
             <td>
@@ -65,7 +74,7 @@
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
           <tr>
-            <td id="3">Bloody Cupcakes</td>
+            <td id="4">Bloody Cupcakes</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
             <td>
@@ -74,7 +83,7 @@
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
           <tr>
-            <td id="4">Drippy Blood Cocktails</td>
+            <td id="5">Drippy Blood Cocktail</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
             <td>
@@ -83,7 +92,7 @@
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
           <tr>
-            <td id="5">Bite Shots</td>
+            <td id="6">Bite Shots</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
             <td>
@@ -92,7 +101,34 @@
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
           <tr>
-            <td id="6">True Blood Vials</td>
+            <td id="7">Slayer Soup</td>
+            <td>9.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>0</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          </tr>
+          <tr>
+            <td id="8">Fresh Bloody Hearts</td>
+            <td>9.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>0</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          </tr>
+          <tr>
+            <td id="9">Flesh Rosebuds</td>
+            <td>9.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>0</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          </tr>
+          <tr>
+            <td id="10">Cheek Shanks with Blood Reduction</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
             <td>
