--- a/styles/confirmed.scss
+++ b/styles/confirmed.scss
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Pirata One', cursive;
   margin-top: 10%;
   background: url('/images/castlevania.jpeg')no-repeat center center fixed;
   -webkit-background-size: cover;
