--- a/views/order.ejs
+++ b/views/order.ejs
@@ -56,7 +56,7 @@
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
           <tr>
-            <td id="2">Blood Puch</td>
+            <td id="2">Blood Punch</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
             <td class="quantity">
