--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,5 +1,26 @@
 footer {
-    margin: 4% 4% 15% 4%;
+    width: 100%;
+    margin: 5% 0% 0% 0%;
+    padding-top: 5%;
+    padding-bottom: 1%;
+    background-color: black;
+}
+
+.about {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row;
+    flex: 1 1 0 ;
+}
+
+.textbox {
+    line-height: 1.5;
+    flex-basis: 100%;
+    max-width: calc(100% / 3);
+    margin: -5px 2% 10px 2%;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 footer .fa {
@@ -7,12 +28,16 @@ footer .fa {
 }
 
 footer .icons {
-    float: right;
+    display: flex;
     padding: 1em 0em;
+    margin-right: -7%;
 }
 
 footer i {
-    margin-right: -33px;
-    padding: 20px 47px 0px 31px;
+    padding: 5px 5px;
+    color: white;
 }
 
+footer p {
+    color: white;
+}
