--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,12 +1,20 @@
 <footer>
-  <div class="icons">
-      <i class="fab fa-twitter-square fa-2x"></i>
-      <i class="fab fa-facebook-square fa-2x"></i>
-      <i class="fab fa-instagram fa-2x"></i>
-  </div>
-  <div>
-    <small><em>
-      Icons made by <a style="color:white;" href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a style="color:white;"  href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a style="color:white;" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
-    </em><small>
-  </div>
+ 
+  <div class="about">
+      <p class="textbox">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non blanditiis, 
+          sunt qui sint quia officiis ut commodi libero ducimus dicta accusamus enim ipsum
+      </p>
+
+      <p class="textbox">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non blanditiis, 
+        sunt qui sint quia officiis ut commodi libero ducimus dicta accusamus enim ipsum
+      </p>
+    </div>
+  
+    <div class="icons">
+        <i class="fab fa-twitter-square fa-2x"></i>
+        <i class="fab fa-facebook-square fa-2x"></i>
+        <i class="fab fa-instagram fa-2x"></i>
+      </div>  
+    </div>
+
 </footer>
