implemented atc filter feature

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -30,6 +30,7 @@
 
   <!--Javascript -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="/scripts/atc.js"></script>
 
   <!-- Meta Information -->
   <title>Bela Lugosi's Fed</title>
@@ -49,10 +50,9 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <button class = "atc" id ="6" type="submit">Add to Cart</button>
       </div>
+
       <div class="menus">
         <img alt="picture" src="/images/bloodpunch.jpg">
         <h2>Blood Punch</h2>
@@ -60,10 +60,9 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <button class = "atc" id ="2" type="submit">Add to Cart</button>
       </div>
+
       <div class="menus">
         <img alt="picture" src="/images/fangcookies.jpg">
         <h2>Fang Cookies</h2>
@@ -71,9 +70,8 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <button class = "atc" id ="10" type="submit">Add to Cart</button>
+
       </div>
     </section>
 
@@ -84,10 +82,10 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <button class = "atc" id ="3" type="submit">Add to Cart</button>
       </div>
+
+
       <div class="menus">
         <img alt="picture" src="/images/cocktail.jpg">
         <h2>Drippy Blood Cocktail</h2>
@@ -95,10 +93,10 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+       <button class = "atc" id ="4" type="submit">Add to Cart</button>
       </div>
+
+
       <div class="menus">
         <img alt="picture" src="/images/biteshots.jpg">
         <h2>Bite Shots</h2>
@@ -106,9 +104,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <button class = "atc" id ="5" type="submit">Add to Cart</button>
       </div>
     </section>
 
@@ -119,10 +115,10 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
-      </div>
+        <button class = "atc" id ="1" type="submit">Add to Cart</button> 
+        </div>
+
+
       <div class="menus">
         <img alt="picture" src="/images/heart.png">
         <h2>Fresh Bloody Hearts</h2>
@@ -130,10 +126,9 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <button class = "atc" id ="7" type="submit">Add to Cart</button>
       </div>
+
       <div class="menus">
         <img alt="picture" src="/images/fleshbuds.png">
         <h2>Flesh Rosebuds</h2>
@@ -141,9 +136,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <button class = "atc" id ="8" type="submit">Add to Cart</button>
       </div>
     </section>
 
@@ -155,9 +148,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
         </p>
-        <form method="" action="post">
-          <button type="submit">Add to Cart</button>
-        </form>
+        <button class = "atc" id ="9" type="submit">Add to Cart</button>
       </div>
     </section>
 
