--- a/views/order.ejs
+++ b/views/order.ejs
@@ -30,6 +30,14 @@
 
      <!-- Application JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/order.js"></script>
+
+    <style>
+        .row{
+          display: none;
+        }
+  
+      </style>
   </head>
 
   <body>
@@ -46,7 +54,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr id="6" class ="row">
             <td id="1">True Blood Vials</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -55,7 +63,8 @@
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr>
+
+          <tr id="2"  class ="row">
             <td id="2">Blood Punch</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -64,7 +73,8 @@
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr>
+
+          <tr  id="10"  class ="row">
             <td id="3">Fang Cookies</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -73,7 +83,8 @@
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr>
+
+          <tr id="3"  class ="row">
             <td id="4">Bloody Cupcakes</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -82,7 +93,8 @@
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr>
+
+          <tr id="4"  class ="row">
             <td id="5">Drippy Blood Cocktail</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -91,7 +103,8 @@
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr>
+
+          <tr id="5"  class ="row">
             <td id="6">Bite Shots</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -100,7 +113,8 @@
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr>
+
+          <tr id="1"  class ="row">
             <td id="7">Slayer Soup</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -109,7 +123,8 @@
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr>
+
+          <tr id="7"  class ="row">
             <td id="8">Fresh Bloody Hearts</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -118,7 +133,8 @@
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr>
+
+          <tr id="8"  class ="row">
             <td id="9">Flesh Rosebuds</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
@@ -127,7 +143,8 @@
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr>
+
+          <tr id="9"  class ="row">
             <td id="10">Cheek Shanks with Blood Reduction</td>
             <td>9.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
