--- a/views/confirmed.ejs
+++ b/views/confirmed.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Confirmation Page</title>
+  <title>Drac's Snax - Confirmation Page</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
