--- a/views/order.ejs
+++ b/views/order.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
   <html lang="en">
   <head>
-    <title>Order Page</title>
+    <title>Drac's Snax - Order Page</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
         .row{
           display: none;
         }
-  
+
       </style>
   </head>
 
