added descriptions for all the menu items

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -47,8 +47,8 @@
         <img alt="picture" src="/images/trueblood.jpg">
         <h2>True Blood Vials</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+          Our blood is drawn fresh from our in-house, organic humans, or for our vegetarian
+          clientele, our tasty synthetic house recipe (we swear, you won't be able to tell the difference)!
         </p>
         <button class = "atc" id ="6" type="submit">Add to Cart</button>
       </div>
@@ -57,8 +57,8 @@
         <img alt="picture" src="/images/bloodpunch.jpg">
         <h2>Blood Punch</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
+          Our organic, locally sourced blood spiked with booze for when you need that little extra kick!
+          Perfect for when you're hosting a soiree with your undead friends.
         </p>
         <button class = "atc" id ="2" type="submit">Add to Cart</button>
       </div>
@@ -67,8 +67,8 @@
         <img alt="picture" src="/images/fangcookies.jpg">
         <h2>Fang Cookies</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
+          Enjoy your Fang Cookies with chocolate chips and a chewy marshmallow and blood-filled centre.
+          Perfect for kindred children and those creatures of the night with a bit of a sweet tooth.
         </p>
         <button class = "atc" id ="10" type="submit">Add to Cart</button>
 
@@ -79,8 +79,8 @@
       <div class="menus">
         <img alt="picture" src="/images/bloodcupcakes.jpg">
         <h2>Bloody Cupcakes</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        <p>Bite down on our fluffy vanilla cupcakes and you'll discover a gooey, blood-filled centre.
+          Perfect for those fussy kindred children with a sweet tooth or for the more innocent among our kind. 
         </p>
         <button class = "atc" id ="3" type="submit">Add to Cart</button>
       </div>
@@ -90,8 +90,8 @@
         <img alt="picture" src="/images/cocktail.jpg">
         <h2>Drippy Blood Cocktail</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
+          An exotic fusion of distilled schnapps, congealed fat and the blood of a virgin make our Drippy
+          Blood Cocktail a treat for the night creatures with refined sensibilities.
         </p>
        <button class = "atc" id ="4" type="submit">Add to Cart</button>
       </div>
@@ -101,8 +101,8 @@
         <img alt="picture" src="/images/biteshots.jpg">
         <h2>Bite Shots</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
+          Bite sized shots of our in-house true blood (comes in vegetarian or organic human options) 
+          mixed with whisky for a bit of a kick. Perfect for the modern vampire on-the-go.
         </p>
         <button class = "atc" id ="5" type="submit">Add to Cart</button>
       </div>
@@ -112,8 +112,8 @@
       <div class="menus">
         <img alt="picture" src="/images/slayersoup.jpg">
         <h2>Slayer Soup</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        <p>Live on the edge with our garlic-infused Slayer Soup.
+          Sometimes being immortal can be a bit of a bore. Order this soup and you may not live through the night.
         </p>
         <button class = "atc" id ="1" type="submit">Add to Cart</button>
         </div>
@@ -123,8 +123,8 @@
         <img alt="picture" src="/images/heart.png">
         <h2>Fresh Bloody Hearts</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
+          These hearts have been skillfully filleted from their human hosts and are served whole on a bed of 
+          dandelion greens with parsnip and blood infused puree. A decadent and hearty meal.
         </p>
         <button class = "atc" id ="7" type="submit">Add to Cart</button>
       </div>
@@ -133,20 +133,19 @@
         <img alt="picture" src="/images/fleshbuds.png">
         <h2>Flesh Rosebuds</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud
+          Tiny chunks of juicy human fat cubed into neat squares and decorated with rosebuds
+          folded from human flesh. Drizzled in a light blood syrup. Perfect for a refined vampiric dinner-party. 
         </p>
         <button class = "atc" id ="8" type="submit">Add to Cart</button>
       </div>
     </section>
 
-
     <section class="flexcontainer">
       <div class="menus">
         <img alt="picture" src="/images/cheekshanks.jpg">
         <h2>Cheek Shanks with Blood Reduction</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud hi hello hi
+        <p>Our finely carved sheek shanks are served in a syrupy blood reduction that has 
+          simmered for hours to obtain its deep, woody flavour and thick consistency. 
         </p>
         <button class = "atc" id ="9" type="submit">Add to Cart</button>
       </div>
