added footer text

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,13 +1,25 @@
 <footer>
  
   <div class="about">
-      <p class="textbox">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non blanditiis, 
-          sunt qui sint quia officiis ut commodi libero ducimus dicta accusamus enim ipsum
-      </p>
+      <div class="textbox">
+          <h2>LOCATION</h2>
+          <p>Brasov 500066</p>
+          <p>Transylvania, Romania</p>
+          <p>phone: 514-622-0593</p>
+          <p>email: countessbathory@gmail.com</p>
+      </div>
 
-      <p class="textbox">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non blanditiis, 
-        sunt qui sint quia officiis ut commodi libero ducimus dicta accusamus enim ipsum
-      </p>
+      <div class="textbox">
+          <h2>OPENING HOURS</h2>
+          
+          <p>LUNCH SERVICE</p>
+          <p>Friday, Saturday & Sunday:</p>
+          Bookings from 12am – 1.30am
+          <p></p>
+          <p>DINNER SERVICE</p>
+          Daily: Bookings from 3am – 6am
+             
+      </div>
     </div>
   
     <div class="icons">
