--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -21,6 +21,7 @@ footer {
     margin: -5px 2% 10px 2%;
     text-align: justify;
     text-justify: inter-word;
+    color: white;
 }
 
 footer .fa {
