fixed slayer soup text

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -114,7 +114,8 @@
         <img alt="picture" src="/images/slayersoup.jpg">
         <h2>Slayer Soup</h2>
         <p>Live on the edge with our garlic-infused Slayer Soup.
-          Sometimes being immortal can be a bit of a bore. Order this soup and you may not live through the night.
+          Sometimes being immortal can be a bit of a bore, so why not live on the edge like a mortal?
+          Order this soup and you may not live through the night.
         </p>
         <button class = "atc" id ="1" type="submit">Add to Cart</button>
         </div>
