i don't want to talk about it...

--- a/styles/confirmed.scss
+++ b/styles/confirmed.scss
@@ -22,7 +22,7 @@ body {
   font-size: 5rem;
 }
 
-footer {
+button {
 margin-top: 2.5rem;
   -webkit-animation-delay: 2s;
   -webkit-animation: fadein 3s;
