--- a/views/order.ejs
+++ b/views/order.ejs
@@ -53,98 +53,96 @@
           </tr>
         </thead>
         <tbody>
-            <tr  id="10"  class ="row">
-                <td id="3">Fang Cookies</td>
-                <td>69.99</td>
-                <td class="minus"><i class="fas fa-minus-circle"></i></td>
-                <td>
-                  <span>0</span>
-                </td>
-                <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          <tr id="1" class ="row">
+            <td>True Blood Vials</td>
+            <td>69.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>1</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          </tr>
+          <tr id="2" class ="row">
+            <td>Blood Punch</td>
+            <td>9.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>1</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          </tr>
+          <tr id="3" class ="row">
+            <td>Fang Cookies</td>
+            <td>129.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>1</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
             </tr>
-            <tr id="9"  class ="row">
-                <td id="10">Cheek Shanks with Blood Reduction</td>
-                <td>9.99</td>
-                <td class="minus"><i class="fas fa-minus-circle"></i></td>
-                <td>
-                  <span>0</span>
-                </td>
-                <td class="plus"><i class="fas fa-plus-circle"></i></td>
-              </tr>
-            <tr id="8"  class ="row">
-                <td id="9">Flesh Rosebuds</td>
-                <td>129.99</td>
-                <td class="minus"><i class="fas fa-minus-circle"></i></td>
-                <td>
-                  <span>0</span>
-                </td>
-                <td class="plus"><i class="fas fa-plus-circle"></i></td>
-              </tr>
-            <tr id="7"  class ="row">
-                <td id="8">Fresh Bloody Hearts</td>
-                <td>5999.99</td>
-                <td class="minus"><i class="fas fa-minus-circle"></i></td>
-                <td>
-                  <span>0</span>
-                </td>
-                <td class="plus"><i class="fas fa-plus-circle"></i></td>
-            </tr>
-           <tr id="1"  class ="row">
-              <td id="7">Slayer Soup</td>
-              <td>59.99</td>
-              <td class="minus"><i class="fas fa-minus-circle"></i></td>
-              <td>
-                <span>0</span>
-              </td>
-              <td class="plus"><i class="fas fa-plus-circle"></i></td>
-            </tr>
+          <tr id="4" class ="row">
+            <td>Bloody Cupcakes</td>
+            <td>5999.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>1</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          </tr>
+          <tr id="5" class ="row">
+            <td id="5">Drippy Blood Cocktail</td>
+            <td>59.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>1</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          </tr>
           <tr id="6" class ="row">
-            <td id="1">True Blood Vials</td>
+            <td>Bite Shots</td>
             <td>1899.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
             <td class="quantity">
-              <span>0</span>
+              <span>1</span>
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr id="2"  class ="row">
-            <td id="2">Blood Punch</td>
+          <tr id="7"  class ="row">
+            <td>Slayer Soup</td>
             <td>89.99</td>
             <td class="minus"><i class="fas fa-minus-circle"></i></td>
             <td class="quantity">
-              <span>0</span>
+              <span>1</span>
             </td>
             <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr id="5"  class ="row">
-              <td id="6">Bite Shots</td>
-              <td>66.60</td>
-              <td class="minus"><i class="fas fa-minus-circle"></i></td>
-              <td>
-                <span>0</span>
-              </td>
-              <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          <tr id="8" class ="row">
+            <td>Fresh Bloody Hearts</td>
+            <td>66.60</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>1</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          
-          <tr id="4"  class ="row">
-              <td id="5">Drippy Blood Cocktail</td>
-              <td>49.99</td>
-              <td class="minus"><i class="fas fa-minus-circle"></i></td>
-              <td>
-                <span>0</span>
-              </td>
-              <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          <tr id="9" class ="row">
+            <td>Flesh Rosebuds</td>
+            <td>49.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span>1</span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
           </tr>
-          <tr id="3"  class ="row">
-              <td id="4">Bloody Cupcakes</td>
-              <td>49.99</td>
-              <td class="minus"><i class="fas fa-minus-circle"></i></td>
-              <td>
-                <span>0</span>
-              </td>
-              <td class="plus"><i class="fas fa-plus-circle"></i></td>
+          <tr id="10" class ="row">
+            <td>Cheek Shanks with Blood Reduction</td>
+            <td>49.99</td>
+            <td class="minus"><i class="fas fa-minus-circle"></i></td>
+            <td>
+              <span></span>
+            </td>
+            <td class="plus"><i class="fas fa-plus-circle"></i></td>
             </tr>
-         
         </tbody>
       </table>
 
